# advent-of-code-2020

./: README.md
day1/: Cargo.toml
day1/src/: part1.rs  part2.rs
day2/: Cargo.toml
day2/src/: part1.rs  part2.rs
day3/: Cargo.toml
day3/src/: part1.rs  part2.rs
day4/: Cargo.toml
day4/src/: main.rs  part2.rs
day5/: Cargo.toml
day5/src/: lib.rs  main.rs
day6/: Cargo.toml
day6/src/: main.rs
day7/: Cargo.toml
day7/src/: lib.rs  main.rs
