[package]
name = "day1"
version = "0.1.0"
authors = ["Enoch Chau <ec965@github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name="part1"
path="src/part1.rs"

[[bin]]
name="part2"
path="src/part2.rs"